...

                <dev.kxxcn.maru.view.custom.MaruTextView
                    android:id="@+id/input_task_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                            <dev.kxxcn.maru.view.custom.MaruTextView
                                android:id="@+id/input_husband_money"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                    <ImageView
                        android:id="@+id/input_husband_decrement"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
...

                    <ImageView
                        android:id="@+id/input_husband_increment"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
...

                            <dev.kxxcn.maru.view.custom.MaruTextView
                                android:id="@+id/input_wife_money"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                    <ImageView
                        android:id="@+id/input_wife_decrement"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
...

                    <ImageView
                        android:id="@+id/input_wife_increment"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
...
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/input_remain_money"
                            android:textColor="@color/inputTint"
                            android:textSize="12sp" />
...

                    <ImageView
                        android:id="@+id/input_remain_decrement"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
...

                    <ImageView
                        android:id="@+id/input_remain_increment"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
...

                    <dev.kxxcn.maru.view.custom.MaruTextView
                        android:id="@+id/input_unit_ten_thousand"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                    <dev.kxxcn.maru.view.custom.MaruTextView
                        android:id="@+id/input_unit_one_hundred_thousand"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                    <dev.kxxcn.maru.view.custom.MaruTextView
                        android:id="@+id/input_unit_one_million"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                    <dev.kxxcn.maru.view.custom.MaruTextView
                        android:id="@+id/input_unit_ten_million"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                <dev.kxxcn.maru.view.custom.MaruTextView
                    android:id="@+id/input_task_complete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <ProgressBar
                    android:id="@+id/input_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
