...
    <string name="input_unit3">+100만</string>
    <string name="input_unit4">+1000만</string>
    <string name="input_complete">입력하기</string>

    <string name="status_message">차근차근 하나씩 준비하세요!</string>
    <string name="status_next_task">차근차근 하나씩. 다음은 %1$s 차례예요.</string>
    <string name="status_should_input_either">지출 금액을 입력하세요.</string>

    <string name="sort_tasks_deletion_dialog_title">체크리스트 삭제</string>
    <string name="sort_tasks_deletion_dialog_message">%1$d개의 항목을 삭제하시겠습니까?</string>
    <string name="sort_tasks_delete">체크리스트 목록이 삭제되었습니다.</string>
    <string name="sort_tasks_update">체크리스트 목록이 업데이트 되었습니다.</string>

...
